[package]
name = "uber-earnings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", default-features = false, features = ["std", "alloc", "clock"] }
clap = { version = "4.3.12", features = ["derive"] }
csv = "1.2.2"
dirs = "5.0.1"
reqwest = { version = "0.11.18", features = ["gzip", "native-tls", "native-tls-vendored", "json", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
